trying to fix the styling not showing

--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@
 }
 
 .young {
-    background-image: url('/images/young-me-correct.png');
+    background-image: url('/Images/young-me-correct.png');
     background-size: 140px 140px;
     display: block;
     width: 140px;
@@ -28,7 +28,7 @@
     margin: 5px;
 }
 .young:hover {
-    background-image: url('/images/normal-me.png');
+    background-image: url('/Images/normal-me.png');
     background-size: 140x 140px;
 }
 
@@ -180,7 +180,7 @@ address img {
     .young {
         float: left;
         margin: 10px;
-        background-image: url('/images/young-me-correct.png');
+        background-image: url('/Images/young-me-correct.png');
         background-size: 140px 140px;
         display: block; 
         width: 140px;
@@ -262,7 +262,7 @@ address img {
         margin-bottom: 30px;
     }
     .young {
-        background-image: url('/images/young-me-correct.png');
+        background-image: url('/Images/young-me-correct.png');
         background-size: 250px 250px;
         display: block;
         width: 250px;
@@ -274,7 +274,7 @@ address img {
         margin-right: 20px;
     }
     .young:hover {
-        background-image: url('/images/normal-me.png');
+        background-image: url('/Images/normal-me.png');
         background-size: 250px 250px;
     }
     p.about-me {
